[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/picking_screen/OptionsBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/picking_screen/PickingOptions.gd" type="Script" id=2]
[ext_resource path="res://scenes/GenericOption.tscn" type="PackedScene" id=4]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -3.84619e-08, 0.475148, -0.879906, 2.07694e-08, 0.879906, 0.475148, 1, 0, -4.37114e-08, -7.51747, 3.93637, 0.236018 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 0.00253077, 0, -0.999997, 0, 4.72635, 0, 12.7604, 0, 0.0322937, 2.79814, -0.0672128, 0 )
visible = false
texture = SubResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 300, 300 )

[node name="Spatial" parent="Viewport" instance=ExtResource( 1 )]

[node name="Option1" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5.49391 )

[node name="Option2" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2.58286 )

[node name="Option3" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.490722 )

[node name="Option4" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.39179 )

[node name="Option5" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.24247 )
